SAK-51199 LTI: Traceback while retrieving line items over AGS